--- a/models/teo_lacqueyFetch/conf/gazebo_teo_rightLacqueyFetch_externalFinger.ini
+++ b/models/teo_lacqueyFetch/conf/gazebo_teo_rightLacqueyFetch_externalFinger.ini
@@ -1,50 +1,51 @@
 disableImplicitNetworkWrapper
 yarpDeviceName controlboard_rightLacqueyFetch_externalFinger
-jointNames TEO_rightLacqueyFetch::ExternalRightFingerProximal TEO_rightLacqueyFetch::ExternalRightFingerDistal
-min_stiffness 0.0    0.0
-max_stiffness 1000.0 1000.0
-min_damping   0.0    0.0
-max_damping   100.0  100.0
+jointNames    (ExternalRightFingerProximal ExternalRightFingerDistal)
+min_stiffness (0.0    0.0)
+max_stiffness (1000.0 1000.0)
+min_damping   (0.0    0.0)
+max_damping   (100.0  100.0)
+max_torques   (9999   9999)
 
 [TRAJECTORY_GENERATION]
 trajectory_type trapezoidal_speed
-refSpeed        10.0 10.0
-refAcceleration 10.0 10.0
+refSpeed        (10.0 10.0)
+refAcceleration (10.0 10.0)
 
 [POSITION_CONTROL]
 controlUnits  metric_units
 controlLaw    joint_pid_gazebo_v1
-kp            0.1745 0.1745
-kd            0.0 0.0
-ki            0.0 0.0
-maxInt        9999  9999
-maxOutput     9999  9999
-shift         0.0   0.0
-ko            0.0   0.0
-stictionUp    0.0   0.0
-stictionDwn   0.0   0.0
+kp            (0.1745 0.1745)
+kd            (0.0000 0.0000)
+ki            (0.0000 0.0000)
+maxInt        (9999  9999)
+maxOutput     (9999  9999)
+shift         (0.0   0.0)
+ko            (0.0   0.0)
+stictionUp    (0.0   0.0)
+stictionDwn   (0.0   0.0)
 
 [VELOCITY_CONTROL]
 velocityControlImplementationType integrator_and_position_pid
 controlUnits  metric_units
 controlLaw    joint_pid_gazebo_v1
-kp            8.726 8.726
-kd            0.035 0.035
-ki            0.002 0.002
-maxInt        9999  9999
-maxOutput     9999  9999
-shift         0.0   0.0
-ko            0.0   0.0
-stictionUp    0.0   0.0
-stictionDwn   0.0   0.0
+kp            (8.726 8.726)
+kd            (0.035 0.035)
+ki            (0.002 0.002)
+maxInt        (9999  9999)
+maxOutput     (9999  9999)
+shift         (0.0   0.0)
+ko            (0.0   0.0)
+stictionUp    (0.0   0.0)
+stictionDwn   (0.0   0.0)
 
 [IMPEDANCE_CONTROL]
 controlUnits  metric_units
 controlLaw    joint_pid_gazebo_v1
-stiffness     0.0  0.0
-damping       0.0  0.0
+stiffness     (0.0  0.0)
+damping       (0.0  0.0)
 
 [LIMITS]
-jntPosMax 10.0 10.0
-jntPosMin -30.0 -50.0
-jntVelMax 100.0 100.0
+jntPosMax (10.0 10.0)
+jntPosMin (-30.0 -50.0)
+jntVelMax (100.0 100.0)
